--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
+    "@tsconfig/vite-react": "^1.0.0",
+    "@types/react": "^17.0.40",
     "eslint": "^8.11.0",
     "eslint-config-dasprid": "^0.1.8",
+    "eslint-plugin-react": "^7.29.3",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.5",
     "standard-version": "^9.3.2",
