--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "1.0.0",
   "description": "Programmatically ask for user confirmation with custom confirm dialogs.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest test --coverage",
     "build": "tsc && vite build",
     "prepare": "husky install",
     "release": "standard-version --no-verify",
-    "prepack": "npm run build"
+    "prepack": "npm run test && npm run build"
   },
   "standard-version": {
     "scripts": {
       "posttag": "git push && git push --tags"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "./dist/my-lib.umd.js",
   "module": "./dist/my-lib.es.js",
   "exports": {
@@ -44,15 +46,22 @@
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
     "@rollup/plugin-typescript": "^8.3.1",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
     "@tsconfig/vite-react": "^1.0.0",
+    "@types/jest": "^27.4.1",
     "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
     "@vitejs/plugin-react": "^1.2.0",
     "eslint": "^8.11.0",
     "eslint-config-dasprid": "^0.1.8",
     "eslint-plugin-react": "^7.29.3",
     "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "lint-staged": "^12.3.5",
+    "react-dom": "^17.0.2",
     "standard-version": "^9.3.2",
+    "ts-jest": "^27.1.3",
     "typescript": "~4.5",
     "vite": "^2.8.6"
   },
