fix: fix package.json syntax

--- a/package.json
+++ b/package.json
@@ -70,6 +70,6 @@
     "*.{ts,tsx}": "eslint --cache --fix"
   },
   "peerDependencies": {
-    "react": "^16.0.0 || ^17.0.0 | ^18.0.0"
+    "react": "^16.0.0 || ^17.0.0 || ^18.0.0"
   }
 }
