--- a/package.json
+++ b/package.json
@@ -44,27 +44,28 @@
   },
   "homepage": "https://github.com/DASPRiD/react-confirm-hook#readme",
   "devDependencies": {
-    "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^16.2.1",
-    "@rollup/plugin-typescript": "^8.3.1",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@tsconfig/vite-react": "^1.0.0",
-    "@types/jest": "^27.4.1",
-    "@types/react": "^17.0.40",
-    "@types/react-dom": "^17.0.13",
-    "@vitejs/plugin-react": "^1.2.0",
-    "eslint": "^8.11.0",
-    "eslint-config-dasprid": "^0.1.8",
-    "eslint-plugin-react": "^7.29.3",
-    "husky": "^7.0.4",
-    "jest": "^27.5.1",
-    "lint-staged": "^12.3.5",
-    "react-dom": "^17.0.2",
-    "standard-version": "^9.3.2",
-    "ts-jest": "^27.1.3",
-    "typescript": "~4.5",
-    "vite": "^2.8.6"
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
+    "@rollup/plugin-typescript": "^11.1.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@tsconfig/vite-react": "^1.0.1",
+    "@types/jest": "^29.5.1",
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "^8.38.0",
+    "eslint-config-dasprid": "^0.1.15",
+    "eslint-plugin-react": "^7.32.2",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "lint-staged": "^13.2.1",
+    "react-dom": "^18.2.0",
+    "standard-version": "^9.5.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "~5.0",
+    "vite": "^4.2.2"
   },
   "lint-staged": {
     "*.{ts,tsx}": "eslint --cache --fix"
