--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.4",
   "description": "Programmatically ask for user confirmation with custom confirm dialogs.",
   "scripts": {
-    "test": "jest test --coverage",
-    "lint": "eslint *.ts src test",
     "build": "tsc && vite build",
-    "prepare": "husky install",
-    "release": "standard-version --no-verify",
-    "prepack": "npm run test && npm run build"
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
+    "format": "biome format . --write",
+    "check": "biome check . --write"
   },
   "standard-version": {
     "scripts": {
@@ -45,33 +44,34 @@
   },
   "homepage": "https://github.com/DASPRiD/react-confirm-hook#readme",
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
-    "@rollup/plugin-typescript": "^12.1.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@tsconfig/vite-react": "^3.4.0",
-    "@types/jest": "^29.5.1",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^8.57.1",
-    "eslint-config-dasprid": "^0.3.2",
-    "eslint-plugin-react": "^7.37.4",
-    "husky": "^9.1.7",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
+    "@vitest/coverage-v8": "^3.1.1",
+    "jsdom": "^26.0.0",
+    "lefthook": "^1.11.6",
     "lint-staged": "^15.5.0",
     "react-dom": "^19.1.0",
-    "standard-version": "^9.5.0",
-    "ts-jest": "^29.1.0",
     "typescript": "^5.0",
-    "vite": "^6.2.4"
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": "eslint --cache --fix"
+    "vite": "^6.2.4",
+    "vite-plugin-dts": "^4.5.3",
+    "vitest": "^3.1.1"
   },
   "peerDependencies": {
     "react": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
+  },
+  "packageManager": "pnpm@10.6.5+sha512.cdf928fca20832cd59ec53826492b7dc25dc524d4370b6b4adbf65803d32efaa6c1c88147c0ae4e8d579a6c9eec715757b50d4fa35eea179d868eada4ed043af",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "esbuild",
+      "lefthook"
+    ]
   }
 }
